responsive for all devices

--- a/Space station/Styles/logIn.css
+++ b/Space station/Styles/logIn.css
@@ -66,7 +66,7 @@
 
 /* responsive for mobile */
 
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 600px) {
     .container{
         width: 90%;
         transform: translate(5%, 40%);
@@ -78,6 +78,50 @@
     
     .container h3{
         font-size: 1.2rem;
+    }
+    .container input[type="text"], input[type="email"], input[type="button"]{
+        width: 90%;
+        padding: 1.2rem 2rem;
+        font-size: 1.2rem;
+    }
+}
+
+/* Responsive for pad */
+
+@media screen and (min-width: 1000px) and (max-width: 1500px) {
+    .container{
+        width: 50%;
+        transform: translate(30%, 20%);
+        padding: 20px 0;
+    }
+    .container h1{
+        font-size: 1.7rem;
+    }
+    
+    .container h3{
+        font-size: 1.3rem;
+    }
+    .container input[type="text"], input[type="email"], input[type="button"]{
+        width: 80%;
+        padding: 1.2rem 2rem;
+        font-size: 1.2rem;
+    }
+}
+
+/* Responsive for surface */
+
+@media screen and (min-width: 577px) and (max-width: 999px) {
+    .container{
+        width: 70%;
+        transform: translate(20%, 30%);
+        padding: 20px 0;
+    }
+    .container h1{
+        font-size: 1.7rem;
+    }
+    
+    .container h3{
+        font-size: 1.3rem;
     }
     .container input[type="text"], input[type="email"], input[type="button"]{
         width: 90%;
