--- a/Coffee shop/style.css
+++ b/Coffee shop/style.css
@@ -33,7 +33,6 @@
 
 .left-container .content{
     text-align: left;
-    margin-left: 15px;
     color: white;
     margin-top: 10rem;
     margin-left: 5rem;
@@ -142,6 +141,42 @@
     justify-content: center;
     align-items: center;
     margin-top: 20%;
+}
+
+@media screen and (max-width: 576px) {
+    .content-container{
+        flex-direction: column-reverse;
+    }
+    
+    .left-container{
+        width: 100%;
+        height: 100%;
+    }
+    
+    .left-container .logo{
+        margin-top: 1.2rem;
+        margin-left: 4rem;
+    }
+
+    .left-container .content{
+        margin-top: 3rem;
+        margin-left: 1rem;
+    }
+    
+    .left-container h1{
+        font-size: 3.5rem;
+        margin-bottom: 1rem;
+    }
+    
+    .left-container p{
+        font-size: 1.2rem;
+        max-width: 97%;
+        margin-bottom: 1rem;
+    }
+    
+    .left-container button{
+        margin-bottom: 2rem;
+    }
 }
 
 
